<resources>
    <string name="app_name">Workout</string>
    <string name="auth">Авторизация</string>
    <string name="reg">Регистрация</string>
    <string name="underName">Приложение для тренировок</string>

    <string name="title_activity_basic">BasicActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Здесь будут клевые словечки</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account">Аккаунт</string>
    <string name="menu_trainings">Тренировки</string>
    <string name="menu_chart">Графики</string>

    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="confirmPass">Повторите пароль</string>
    <string name="userName">Имя пользователя</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="gender">Укажите пол:</string>
    <string name="genderM">Мужской</string>
    <string name="genderF">Женский</string>

    <string name="change">Изменить</string>
    <string name="heightAcc">Рост:</string>
    <string name="weightAcc">Вес:</string>
    <string name="log_out">Выйти из аккаунта</string>

    <string name="icon_change">Выберите изображение</string>
    <string name="load_image">Загрузить изображение</string>

    <string name="name_of_training">Название тренировки</string>
    <string name="exercises">Упражнений: 0</string>
    <string name="delete">Удалить</string>
    <string name="name_of_exercise">Название упражнения</string>
    <string name="count_of_exercise">Количество повторов</string>
    <string name="confirm_changes">Сохранить изменения</string>
    <string name="weight_chart">Просмотреть график веса</string>
    <string name="trainings_chart">Просмотреть график тренировок</string>

    <string name="public_training">Опубликовать тренировку?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="accept">Принять</string>
    <string name="finish">Завершить упражнение</string>
    <string name="current">Текущий: </string>
    <string name="done">Сделано:</string>
</resources>
