<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_account">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.workout.main.Fragments.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_trainings"
        android:name="com.example.workout.main.Fragments.TrainingFragment"
        android:label="@string/menu_trainings"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_chart"
        android:name="com.example.workout.main.Fragments.ChartsFragment"
        android:label="@string/menu_chart"
        tools:layout="@layout/fragment_chart" />
</navigation>