<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/name_of_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_exercise"
            android:textSize="20sp"
            android:inputType="text"
            app:met_floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/count_of_replays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/count_of_exercise"
            android:textSize="20sp"
            android:inputType="number"
            app:met_floatingLabel="normal"
            android:maxLength="2"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_weight_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            app:met_floatingLabel="normal"
            android:maxLength="5"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>