<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/account_back"
    tools:context=".main.Actitivities.IconActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/icon_change"
            android:textSize="30sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingDefaultResource"
            android:layout_gravity="center"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_userIcon"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/user" />

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="confirmIcon"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_style_account"
            android:text="@string/change"/>

    </LinearLayout>

    <GridView
        android:id="@+id/gv_changeIcon"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_load_image"
            android:layout_width="200dp"
            android:onClick="load_from_gallery"
            android:layout_height="wrap_content"
            android:text="@string/load_image"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>