<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_nameOfExercise"
        android:text="@string/name_of_exercise"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Прошлый результат"
            android:layout_marginRight="45dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Текущий результат"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="45dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_numberOfReplays"
            android:text="Повторов: "
            android:textSize="20sp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


        <EditText
            android:id="@+id/et_count_of_replays"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:inputType="number"
            android:maxLength="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_weight_of_exercise"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/weightAcc"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/et_weight_of_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:hint="0"
            android:inputType="numberDecimal"
            android:maxLength="5" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_finish_exercise"
        android:layout_gravity="center_horizontal"
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

</LinearLayout>